// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`order order of dependent blocks 1`] = `
".button { order: 0 }
.select { order: 1 }

/*# sourceMappingURL=_index.css.map*/"
`;

exports[`order order of modifiers 1`] = `
".button { order: 0 }
.button_theme_normal { order: 1 }
.button_theme_action { order: 2 }
.button_size_m, { order: 3 }

/*# sourceMappingURL=_index.css.map*/"
`;
